<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".InfoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:id="@+id/firstCardView"
        android:layout_height="320dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewInfo"
                android:layout_width="240dp"
                android:layout_height="266dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/product1" />

            <TextView
                android:id="@+id/ProductInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewInfo"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="Product Name"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewInfo"
                android:layout_alignRight="@+id/ProductInfo"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:text="€5/500g"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:id="@+id/secondCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/firstCardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="130dp"
                android:id="@+id/addquantity"
                android:background="@drawable/ic_baseline_add_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/quantity"
                android:textSize="28sp"
                android:layout_toRightOf="@+id/addquantity"/>


            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/subquantity"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/quantity"
                android:background="@drawable/ic_baseline_remove_24"/>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:id="@+id/radioGroup"
                android:layout_below="@id/subquantity">


                <RadioButton
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="normal"
                    android:layout_marginRight="10dp"
                    android:id="@+id/hotradioButton"/>

                <RadioButton
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="organic"
                    android:id="@+id/coldRadioButton"/>

            </RadioGroup>

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup"
                android:id="@+id/addToppings"
                android:text="Organic Add Extra €1"/>

            <CheckBox
                android:visibility="invisible"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addCream"
                android:layout_below="@+id/addToppings"
                android:text="Add Extra large €1"/>


            <TextView
                android:id="@+id/descriptioninfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addCream"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                android:text="Japanese rice is characteristically clingy and sticky. Starch is itself composed of amylose and amylopectin. When the level of amylose is low and amylopectin is high, you get sticky rice. That's the kind of rice grown in Japan."
                android:textSize="15sp"
                android:textStyle="italic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/descriptioninfo"
                android:background="#3F51B5"
                android:textStyle="bold"
                android:id="@+id/addtocart"
                android:textColor="@android:color/white"
                android:text="Add to cart"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="119dp"
                android:layout_height="34dp"

                android:text="choose checkbox first! then quantity"
                android:textColor="@color/colorPrimary" />


        </RelativeLayout>






    </androidx.cardview.widget.CardView>


</RelativeLayout>

